--- a/app/ui5/view/Hierarchies.view.xml
+++ b/app/ui5/view/Hierarchies.view.xml
@@ -34,7 +34,7 @@
 		</tnt:sideContent>
 		<tnt:mainContents>
 			<NavContainer
-				id="pageContainer"
+				id="pageContainerHierarchies"
 				initialPage="pageMainHierarchy"
 				height="100%"
 				width="100%"
